cache hooks
Signed-off-by: christian.lutnik <christian.lutnik@dynatrace.com>